[package]
name = "game-dont-panic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Profiles taken from https://github.com/rp-rs/rp2040-project-template

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[dependencies]
cortex-m-rt = "0.7.3"
critical-section = "1.1.2"
defmt-rtt = "0.4.0"
embedded-graphics = "0.8.1"
embedded-hal = "0.2.7"
fugit = "0.3.7"
itoa = "1.0.10"
panic-halt = "0.2.0"
sh1106 = "0.5.0"
usb-device = "0.2"
usbd-serial = "0.1"
waveshare-rp2040-zero = "0.7.0"

[dev-dependencies]
embedded-graphics-simulator = "0.6.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
